# CrewAI-Email-Agent-Flow

./: .gitignore  README.md  document.txt  pyproject.toml  report.md  requirements.txt  schedule_config.json  send_outlook_email.py
email_scheduler/: manage.py
email_scheduler/email_scheduler/: asgi.py  settings.py  urls.py  wsgi.py
email_scheduler/emailcrew/: .gitignore
email_scheduler/emailcrew/src/emailcrew/: crew.py  main.py  msal_cache.py  send_outlook_email.py
email_scheduler/emailcrew/src/emailcrew/config/: agents.yaml  tasks.yaml
email_scheduler/emailcrew/src/emailcrew/templates/: confirmation.html
email_scheduler/scheduler/: __init__.py  apps.py  auth_views.py  jobs.py  models.py  urls.py  views.py
email_scheduler/scheduler/management/commands/: run_crew.py
email_scheduler/scheduler/migrations/: 0001_initial.py
email_scheduler/scheduler/templates/: index.html
email_scheduler/scheduler/templates/scheduler/: confirmation.html  error.html  index.html  login.html  signup.html
src/emailcrew/: crew.py  main.py
src/emailcrew/config/: tasks.yaml
src/emailcrew/templates/: index.html
