[project]
name = "emailcrew"
version = "0.1.0"
description = "emailcrew using crewAI"
authors = [{ name = "Mahad", email = "mahadrehman04@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "msal>=1.32.3",
    "onnxruntime>=1.22.0",
]

[project.scripts]
emailcrew = "emailcrew.main:run"
run_crew = "emailcrew.main:run"
train = "emailcrew.main:train"
replay = "emailcrew.main:replay"
test = "emailcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
